--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="scroll-smooth scroll-mt-96 overflow-x-hidden">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/astronauta-rocket.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Rich Guilherme</title>
